Crash with unreachable code execution when loading specific .blend #111024

Closed
opened 2023-08-10 22:40:35 +02:00 by Daybreak · 5 comments
Contributor

System Information
Operating system: Linux-6.4.8-arch1-1-x86_64-with-glibc2.38 64 Bits, X11 UI
Graphics card: NVIDIA GeForce RTX 3080/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 535.86.05

Blender Version
Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-08-10 03:47, hash: 4ad63687cbc4
Worked: version: 3.6.1, branch: blender-v3.6-release, commit date: 2023-07-17 12:50, hash: 8bda729ef4dc

Short description of error
Upon loading the "Einar - Real-Time Realism Demo" file from the Blender Studio, the latest alpha build of Blender crashes. The console reports that unreachable code has been executed. The blender.crash.txt contains no relevant information.

Exact steps for others to reproduce the error
Load this exact file from the Blender Studio.

**System Information** Operating system: Linux-6.4.8-arch1-1-x86_64-with-glibc2.38 64 Bits, X11 UI Graphics card: NVIDIA GeForce RTX 3080/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 535.86.05 **Blender Version** Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-08-10 03:47, hash: `4ad63687cbc4` Worked: version: 3.6.1, branch: blender-v3.6-release, commit date: 2023-07-17 12:50, hash: `8bda729ef4dc` **Short description of error** Upon loading the "Einar - Real-Time Realism Demo" file from the Blender Studio, the latest alpha build of Blender crashes. The console reports that unreachable code has been executed. The `blender.crash.txt` contains no relevant information. **Exact steps for others to reproduce the error** Load [this exact file](https://studio.blender.org/films/charge/gallery/?asset=6279) from the Blender Studio.
Daybreak added the
Type
Report
Priority
Normal
Status
Needs Triage
labels 2023-08-10 22:40:35 +02:00
Daybreak changed title from Crash with unreachable code execution when loading .blend to Crash with unreachable code execution when loading specific .blend 2023-08-10 22:41:01 +02:00
YimingWu added the
Interest
Animation & Rigging
Interest
Pipeline, Assets & IO
labels 2023-08-11 04:22:32 +02:00
Member

Thanks for the report. Can confirm the crash.

Thanks for the report. Can confirm the crash.
Pratik Borhade added
Module
Modeling
Status
Confirmed
Priority
High
and removed
Status
Needs Triage
Priority
Normal
labels 2023-08-11 06:24:24 +02:00
Member

From crash logs I suspect 12ef20990b causing the crash
@lichtwerk ^ :)

From crash logs I suspect 12ef20990b35efbf8358a501d52119cd9f6197ed causing the crash @lichtwerk ^ :)
Member

As far as I understand, crash occur because new curve object don't support vgroups and we searched for vgroup in them.
assert hit happens when BKE_id_defgroup_list_get called in defgroup_find_name_dupe.

I'll give a try 😅


Simple way to repro is:

  • Open default scene
  • Add new curve object
  • Add attribute
As far as I understand, crash occur because new curve object don't support vgroups and we searched for vgroup in them. assert hit happens when `BKE_id_defgroup_list_get` called in `defgroup_find_name_dupe`. I'll give a try 😅 - - - Simple way to repro is: - Open default scene - Add new curve object - Add attribute
Pratik Borhade self-assigned this 2023-08-11 07:26:45 +02:00
Member

Fix: #111036

Guess this is enough?

Fix: https://projects.blender.org/blender/blender/pulls/111036 Guess this is enough?
Member

Thx looking into this! Commented in !111036

Thx looking into this! Commented in !111036
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-08-12 07:37:48 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#111024
No description provided.