Fix #111024: Crash when adding attribute to curve object

After 12ef20990b, attributes and vertex group names were checked
simulatanously to fix the name collision. But this results in crash when
new attribute is added to curve object (when it searches for vertex group
list). To avoid the crash, check for supported id types.